--- a/index.html
+++ b/index.html
@@ -1,5 +1,27 @@
 ---
 layout: page
 title: Welcome to Harbour Cloud
-subtitle: Your local Cloud and Security expert
+subtitle: Navigating Your Path to Cloud Excellence
 ---
+
+#### Elevate Your Business with Advanced Cloud Solutions
+
+Harbour Cloud is at the forefront of digital transformation, offering innovative cloud and security solutions tailored to your unique business needs. Our mission is to streamline your transition to the cloud with AWS, Azure, Alibaba Cloud, and Microsoft Office 365.
+
+#### Simplifying Complexity, Enhancing Productivity
+
+- **Comprehensive Cloud Services**: Explore a range of cloud solutions designed to boost efficiency and scalability.
+- **Security and Compliance**: Prioritize your data protection with our robust security measures.
+- **Expertise at Your Service**: Benefit from our seasoned experts dedicated to supporting your cloud journey.
+
+#### About Harbour Cloud
+
+Learn more about our mission, values, and the expert team behind our cloud solutions.
+
+[Discover More](#about)
+
+#### Get Started on Your Cloud Journey
+
+Connect with us today and take the first step towards a smarter, more secure cloud experience.
+
+[Contact Us](mailto:info@harbourcloud.com.au)
