--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@ layout: page
 title: Welcome to Harbour Cloud
 subtitle: Navigating Your Path to Cloud Excellence
 ---
+    <div class="layout page">
+        <h1>Welcome to Harbour Cloud</h1>
+        <h2>Navigating Your Path to Cloud Excellence</h2>
 
-#### Elevate Your Business with Advanced Cloud Solutions
+        <h4>Elevate Your Business with Advanced Cloud Solutions</h4>
+        <p>Harbour Cloud is at the forefront of digital transformation, offering innovative cloud and security solutions tailored to your unique business needs. Our mission is to streamline your transition to the cloud with AWS, Azure, Alibaba Cloud, and Microsoft Office 365.</p>
 
-Harbour Cloud is at the forefront of digital transformation, offering innovative cloud and security solutions tailored to your unique business needs. Our mission is to streamline your transition to the cloud with AWS, Azure, Alibaba Cloud, and Microsoft Office 365.
+        <h4>Simplifying Complexity, Enhancing Productivity</h4>
+        <ul>
+            <li><strong>Comprehensive Cloud Services</strong>: Explore a range of cloud solutions designed to boost efficiency and scalability.</li>
+            <li><strong>Security and Compliance</strong>: Prioritize your data protection with our robust security measures.</li>
+            <li><strong>Expertise at Your Service</strong>: Benefit from our seasoned experts dedicated to supporting your cloud journey.</li>
+        </ul>
 
-#### Simplifying Complexity, Enhancing Productivity
+        <h4>About Harbour Cloud</h4>
+        <p>Learn more about our mission, values, and the expert team behind our cloud solutions.</p>
+        <a href="#about">Discover More</a>
 
-- **Comprehensive Cloud Services**: Explore a range of cloud solutions designed to boost efficiency and scalability.
-- **Security and Compliance**: Prioritize your data protection with our robust security measures.
-- **Expertise at Your Service**: Benefit from our seasoned experts dedicated to supporting your cloud journey.
-
-#### About Harbour Cloud
-
-Learn more about our mission, values, and the expert team behind our cloud solutions.
-
-[Discover More](#about)
-
-#### Get Started on Your Cloud Journey
-
-Connect with us today and take the first step towards a smarter, more secure cloud experience.
-
-[Contact Us](mailto:info@harbourcloud.com.au)
+        <h4>Get Started on Your Cloud Journey</h4>
+        <p>Connect with us today and take the first step towards a smarter, more secure cloud experience.</p>
+        <a href="mailto:info@harbourcloud.com.au">Contact Us</a>
+    </div>
