change some words

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
     <div class="section-inner">
       <div class="section-label">About Harbour Cloud</div>
       <p>
-        Harbour Cloud Pty Ltd is an independent, Australian-based cloud and IT provider. We specialise in cloud licensing, migration, cybersecurity, and support for small to mid-sized businesses. Our mission is to make world-class technology easy, accessible, and affordable. No jargon, no hard sell.
+        Harbour Cloud Pty Ltd is an independent, Australian-based cloud and IT provider. We specialise in cloud licensing, migration, cybersecurity, and support for Australian businesses. Our mission is to make world-class technology easy, accessible, and affordable. No jargon, no hard sell.
       </p>
       <ul class="about-list">
         <li>Locally owned and operated in Australia</li>
