add 10% off microsoft

--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
       </a>
       <nav class="main-nav">
         <a href="#services">Services</a>
+        <a href="#m365-offer">Microsoft 365 Offer</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
       </nav>
@@ -353,6 +354,32 @@
         Harbour Cloud delivers secure, efficient cloud and IT licensing solutions to Australian businesses. Get big-business expertise with friendly, personal support.
       </p>
       <a href="#services" class="cta-button">See Our Services</a>
+      <a href="#m365-offer" class="cta-button" style="margin-top:14px; display:inline-block; background:#265a8f;">
+        10% Off Microsoft 365
+      </a>
+    </div>
+  </section>
+
+  <section id="m365-offer" class="bg-bluegrey">
+    <div class="section-inner">
+      <h2>Microsoft 365 – 10% Off (Annual Prepaid Plans)</h2>
+      <p style="max-width:800px;">
+        Switch your Microsoft 365 billing to Harbour Cloud and get an ongoing <strong>10% discount</strong> when paid annually.
+        One invoice per year. No downtime. No data migration required. Works for any business size.
+      </p>
+      <ul style="margin-top:18px; margin-bottom:26px; padding-left:22px; color:#384258; font-size:1rem;">
+        <li>10% savings on any Microsoft 365 annual plan</li>
+        <li>One invoice per year — low admin for your business</li>
+        <li>Free Microsoft 365 security &amp; cost review included</li>
+        <li>Sydney-based, friendly local support</li>
+        <li>Clear pricing. No lock-in beyond Microsoft’s annual term</li>
+      </ul>
+      <p class="contact-email" style="margin-bottom: 28px; font-size: 1.1rem;">
+        Contact us directly at
+        <a href="mailto:sales@harbourcloud.com.au">sales@harbourcloud.com.au</a>
+      </p>
+
+
     </div>
   </section>
 
